--- a/shah/app.css
+++ b/shah/app.css
@@ -2787,6 +2787,14 @@
   margin-right: 0.25rem;
 }
 
+.availability-calendar {
+  overflow: scroll;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
 .availability-calendar .calendar .days > .day .day-meta .custom-price {
   color: green;
 }
@@ -10205,6 +10213,13 @@ svg.help-icon:hover path {
   margin-bottom: 1rem;
 }
 
+.availability-modal .choose-dates {
+  -ms-flex: auto 0 0;
+  -moz-flex: auto 0 0;
+  -webkit-flex: auto 0 0;
+  flex: auto 0 0;
+}
+
 .availability-modal .actions .btn {
   width: 250px;
   margin-left: auto;
@@ -10213,10 +10228,60 @@ svg.help-icon:hover path {
 
 .availability-modal .actions {
   display: flex;
+  -ms-flex: auto 0 0;
+  -moz-flex: auto 0 0;
+  -webkit-flex: auto 0 0;
+  flex: auto 0 0;
   -ms-flex-direction: column;
   -moz-flex-direction: column;
   -webkit-flex-direction: column;
   flex-direction: column;
+}
+
+.availability-modal.modal-content {
+  min-height: auto;
+}
+
+.availability-modal.modal-header .modal-title div {
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.availability-modal.modal-header .modal-title .clear-button,
+.availability-modal.modal-header .modal-title .close-button {
+  font-size: 12px;
+  cursor: pointer;
+  font-weight: 300;
+  -ms-flex: auto 0 0;
+  -moz-flex: auto 0 0;
+  -webkit-flex: auto 0 0;
+  flex: auto 0 0;
+}
+
+.availability-modal.modal-header .modal-title .close-button {
+  content: '';
+  display: inline-block;
+  background-image: url('images/close-icon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 1rem;
+  height: 2rem;
+  width: 2rem;
+}
+
+.availability-modal.modal-header .modal-title .clear-button:hover {
+  color: var(--bright-blue);
+}
+
+.availability-modal.modal-header .modal-title .clear-button {
+  text-decoration: none;
+  color: var(--bright-blue);
+}
+
+.availability-modal.modal-header .modal-title {
+  display: flex;
 }
 
 @media (max-width: 767.98px) {
