--- a/loading-to-spinner/app.css
+++ b/loading-to-spinner/app.css
@@ -1037,12 +1037,15 @@
 
 .loading-spinner-container {
   background-color: white;
-  width: 4em;
-  height: 4em;
+  width: 5em;
+  height: 5em;
   position: fixed;
-  top: calc(50% - 2em);
-  left: calc(50% - 2em);
+  top: calc(50% - 2.5em);
+  left: calc(50% - 2.5em);
   border-radius: 8px;
+  opacity: 0.9;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
+  filter: alpha(opacity=90);
 }
 
 .loading-spinner {
@@ -1051,8 +1054,8 @@
   width: 3em;
   height: 3em;
   position: relative;
-  top: 0.5em;
-  left: 0.5em;
+  top: 1em;
+  left: 1em;
 }
 
 .earnings-progress {
